tests/toy/neg/001606_mutation.toylang
program a = { while a do do sleep; } .
